--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#" class="logo">El <Span>Jardin</Span> de Gloria</a>
         <nav class="navbar">
             <a href="#home">Inicio</a>
-            <a href="#about">Sobre mi</a>
+            <a href="#about">¿Quien soy?</a>
             <a href="#gallery">Galeria</a>
             <a href="#price">Precio</a>
             <a href="#contact">Contacto</a>
@@ -30,7 +30,7 @@
 
         <div class="content">
             <h3>Dale vida a tu jardín con una <span>corona de cristo</span></h3>
-            <a href="#" class="btn">Contactame!</a> 
+            <a href="#contact" class="btn">Contactame</a> 
         </div>
 
         <div class="swiper home-slider">
@@ -163,7 +163,7 @@
                     <li><i class="fas fa-check"></i>Empaquetado Seguro</li>
                     <li><i class="fas fa-check"></i>Seguimiento de Paquete</li>
                 </ul>
-                <a href="#" class="btn">Comprar</a>
+               <!-- <a href="#" class="btn">Comprar</a> --> 
             </div>
             <div class="box">
                 <h3 class="title">Por Unidad</h3>
@@ -173,11 +173,57 @@
                     <li><i class="fas fa-check"></i>Empaquetado Seguro</li>
                     <li><i class="fas fa-check"></i>Seguimiento de Paquete</li>
                 </ul>
-                <a href="#" class="btn">Comprar</a>
+               <!--<a href="#" class="btn">Comprar</a>--> 
             </div>
         </div>
     </section>
+
+    <!--contact seccion-->
+
+    <section class="contact" id="contact">
+        <h1 class="heading"><span>Contacto</span></h1>
+
+        <form action="">
+        <div class="inputBox">
+            <input type="text" placeholder="Nombre">
+            <input type="email" placeholder="Correo">
+        </div>
+        <div class="inputBox">
+            <input type="number" placeholder="Telefono">
+            <input type="text" placeholder="Asunto">
+        </div>
+        <textarea name="" placeholder="Escribe tu mensaje" id="" cols="30" rows="10"></textarea>
+        <input type="submit" value="Enviar Mensaje" class="btn">
+        </form>
+    </section>
     
+    <!--footer seccion-->
+
+    <section class="footer">
+        <div class="box-container">
+            <div class="box">
+                <h3>Contacto</h3>
+                <a href="#"><i class="fas fa-phone"></i>44444444</a>
+                <a href="#"><i class="fas fa-envelope"></i>Correo@gmail.com</a>
+                <a href="#"><i class="fas fa-map-marked"></i>Acapulco, Gro. Mexico</a>
+            </div>
+            <div class="box">
+                <h3>Nevegacion</h3>
+                <a href="#home"><i class="fas fa-arrow-right"></i>Inicio</a>
+                <a href="#about"><i class="fas fa-arrow-right"></i>¿Quien Soy?</a>
+                <a href="#gallery"><i class="fas fa-arrow-right"></i>Galeria</a>
+                <a href="#price"><i class="fas fa-arrow-right"></i>Precio</a>
+            </div>
+            <div class="box">
+                <h3>Redes Sociales</h3>
+                <a href="#home"><i class="fab fa-facebook-f"></i>Facebook</a>
+            </div>
+        </div>
+    </section>
+
+
+
+
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
