--- a/index.html
+++ b/index.html
@@ -221,6 +221,22 @@
         </div>
     </section>
 
+    <!--footer seccion-->
+    <div class="theme-toggler">
+        <div class="toggle-btn">
+            <i class="fas fa-cog"></i>
+        </div>
+        <h3>Cambiar Color</h3>
+
+        <div class="buttons">
+            <div class="theme-btn" style="background-color: #57e03b;"></div>
+            <div class="theme-btn" style="background-color: #e6d32d;"></div>
+            <div class="theme-btn" style="background-color: #3b88e0;"></div>
+            <div class="theme-btn" style="background-color: #52119c;"></div>
+            <div class="theme-btn" style="background-color: #f0267a;"></div>
+            <div class="theme-btn" style="background-color: #c24444;"></div>
+        </div>
+    </div>
 
 
 
