--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           cols="30"
           rows="10"
         ></textarea>
-        <input type="submit" value="Enviar Mensaje" class="btn" />
+        <input type="submit" name="submit" value="Enviar Mensaje" class="btn" />
       </form>
     </section>
 
