--- a/index.html
+++ b/index.html
@@ -92,8 +92,6 @@
           <img src="img/9.jpg" />
           <h3 class="title">Mis Colecciones</h3>
           <div class="icons">
-            <a href="#" class="fa fa-heart"></a>
-            <a href="#" class="fa fa-share"></a>
             <a href="img/9.jpg" class="fancybox" data-fancybox="gallery-1"><i class="fa fa-eye"></i></a> 
           </div>
         </div>
@@ -102,8 +100,6 @@
           <img src="img/10.jpg" />
           <h3 class="title">Mis Colecciones</h3>
           <div class="icons">
-            <a href="#" class="fa fa-heart"></a>  
-            <a href="#" class="fa fa-share"></a>
             <a href="img/10.jpg" class="fancybox" data-fancybox="gallery-1"><i class="fa fa-eye"></i></a>         
             </div>
         </div>
@@ -112,8 +108,6 @@
           <img src="img/11.jpg" />
           <h3 class="title">Mis Colecciones</h3>
           <div class="icons">
-            <a href="#" class="fa fa-heart"></a>
-            <a href="#" class="fa fa-share"></a>
             <a href="img/11.jpg" class="fancybox" data-fancybox="gallery-1"><i class="fa fa-eye"></i></a>  
           </div>
         </div>
@@ -121,8 +115,6 @@
           <img src="img/12.jpg" />
           <h3 class="title">Mis Colecciones</h3>
           <div class="icons">
-            <a href="#" class="fa fa-heart"></a>
-            <a href="#" class="fa fa-share"></a>
             <a href="img/12.jpg" class="fancybox" data-fancybox="gallery-1"><i class="fa fa-eye"></i></a>  
           </div>
         </div>
@@ -130,8 +122,6 @@
           <img src="img/13.jpg" />
           <h3 class="title">Mis Colecciones</h3>
           <div class="icons">
-            <a href="#" class="fa fa-heart"></a>
-            <a href="#" class="fa fa-share"></a>
             <a href="img/13.jpg" class="fancybox" data-fancybox="gallery-1"><i class="fa fa-eye"></i></a>  
           </div>
         </div>
@@ -139,8 +129,6 @@
           <img src="img/14.jpg" />
           <h3 class="title">Mis Colecciones</h3>
           <div class="icons">
-            <a href="#" class="fa fa-heart"></a>
-            <a href="#" class="fa fa-share"></a>
             <a href="img/14.jpg" class="fancybox" data-fancybox="gallery-1"><i class="fa fa-eye"></i></a>  
           </div>
         </div>
@@ -148,8 +136,6 @@
           <img src="img/15.jpg" />
           <h3 class="title">Mis Colecciones</h3>
           <div class="icons">
-            <a href="#" class="fa fa-heart"></a>
-            <a href="#" class="fa fa-share"></a>
             <a href="img/15.jpg" class="fancybox" data-fancybox="gallery-1"><i class="fa fa-eye"></i></a>  
           </div>
         </div>
@@ -157,8 +143,6 @@
           <img src="img/16.jpg" />
           <h3 class="title">Mis Colecciones</h3>
           <div class="icons">
-            <a href="#" class="fa fa-heart"></a>
-            <a href="#" class="fa fa-share"></a>
             <a href="img/16.jpg" class="fancybox" data-fancybox="gallery-1"><i class="fa fa-eye"></i></a>  
           </div>
         </div>
@@ -166,8 +150,6 @@
           <img src="img/17.jpg" />
           <h3 class="title">Mis Colecciones</h3>
           <div class="icons">
-            <a href="#" class="fa fa-heart"></a>
-            <a href="#" class="fa fa-share"></a>
             <a href="img/17.jpg" class="fancybox" data-fancybox="gallery-1"><i class="fa fa-eye"></i></a>  
           </div>
         </div>
@@ -226,7 +208,7 @@
           cols="30"
           rows="10"
         ></textarea>
-        <input type="submit" name="submit" value="Enviar Mensaje" class="btn" />
+        <input type="submit" name="submit" class="btn"/>
       </form>
     </section>
 
